saga-architecture-istio-manifests/saga-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: saga-gateway
  namespace: saga-servicemesh
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 8080
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: saga
  namespace: saga-servicemesh
spec:
  hosts:
  - "*"
  gateways:
  - saga-gateway
  http:
  - match:
    - uri:
        prefix: /restful/accounts
    route:
    - destination:
        host: account
        port:
          number: 80
  - match:
      - uri:
          prefix: /restful/goods
    route:
      - destination:
          host: goods
          port:
            number: 80
  - match:
      - uri:
          prefix: /restful/order
    route:
      - destination:
          host: order
          port:
            number: 80
#  - match:
#      - uri:
#          prefix: /restful/orchestrator
#    route:
#      - destination:
#          host: orchestrator
#          port:
#            number: 80
  - match:
      - uri:
          prefix: /oauth
    route:
      - destination:
          host: authentication
          port:
            number: 80
  - route:
      - destination:
          host: frontend
          port:
            number: 80
