saga-architecture-istio-manifests/saga-authorization-peer-policy.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: authorization-peer
  namespace: saga-servicemesh
spec:
  action: ALLOW
  rules:
    - from:
        - source:
            namespaces: ["saga-servicemesh"]
      to:
        - operation:
            paths:
              - /restful/accounts/*
              - /restful/order/*
              - /restful/goods/*
              - /restful/orchestrator/*
            methods: ["GET","POST","PUT","PATCH"]
    - from:
        - source:
            namespaces: ["istio-system"]
