saga-architecture-istio-manifests/saga-authorization-request-policy.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: authorization-request
  namespace: saga-servicemesh
spec:
  action: DENY
  rules:
    - from:
        - source:
            notRequestPrincipals: ["*"]
            notNamespaces: ["saga-servicemesh"]
      to:
        - operation:
            paths:
              - /restful/accounts/*
              - /restful/order/*
              - /restful/goods/*
              - /restful/orchestrator/*
